--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
     <title>BookMyShow</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
